<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DocDokuPLM</string>

    <!-- Activities name -->
    <string name="act_document">Document:</string>
    <string name="act_document_search">Documents search</string>
    <string name="act_documents_list">Documents</string>
    <string name="act_documents_history">History documents</string>
    <string name="act_documents_reserved">Reserved documents</string>
    <string name="act_part">Part:</string>
    <string name="act_part_search">Part search</string>
    <string name="act_parts_list">Parts</string>
    <string name="act_parts_history">History parts</string>
    <string name="act_parts_reserved">Reserved parts</string>
    <string name="act_user">Users</string>
    <string name="act_folder">Folder:</string>
    <string name="act_folders_list">Folders</string>
    <string name="act_gdx">Viewer 3D:</string>

    <!-- Connection/Disconnection strings -->
    <string name="form_connection_url">Server URL:</string>
    <string name="form_connection_url_placeholder">docdokuplm.net</string>
    <string name="form_connection_login">Username:</string>
    <string name="form_connection_password">Password:</string>
    <string name="form_connection_auto_connect">Log in automatically</string>
    <string name="dialog_connection_login_error">Wrong username or password</string>
    <string name="dialog_connection_confirm_disconnect">Do you want to log out?</string>

    <!-- Close/Quit application strings -->
    <string name="dialog_app_close">Close Application</string>
    <string name="dialog_app_confirm_close">Do you want to close the DPLM?</string>

    <!-- Useful strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="error">!Error!</string>
    <string name="simpleDateFormat">MM/dd/yyyy</string>
    <string name="fullDateFormat">MM/dd/yyyy kk:mm:ss</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>

    <!-- Network interaction -->
    <string name="net_connection">Connection</string>
    <string name="net_connecting_server">Connecting to server</string>
    <string name="net_no_connection_available">Not internet connection available</string>
    <string name="net_connection_error">Connection error</string>
    <string name="net_server_url_error">Url error: server not responding</string>
    <string name="net_loading">Loading, please wait…</string>
    <string name="net_downloading">Downloading…</string>
    <string name="net_download_failed">Download failed</string>
    <string name="net_uploading">Uploading…</string>
    <string name="net_upload_failed">File upload fail</string>
    <string name="dialog_choose_opening_app">Choose which application to use to open file</string>

    <!-- Menu -->
    <string name="menu_workspace">Workspace</string>
    <string name="menu_documents">Documents</string>
    <string name="menu_document_search">Search</string>
    <string name="menu_documents_history">History</string>
    <string name="menu_all_documents">All</string>
    <string name="menu_checked_out_documents">Checked out</string>
    <string name="menu_document_folders">Folders</string>
    <string name="menu_parts">Parts</string>
    <string name="menu_part_search">Search</string>
    <string name="menu_parts_history">History</string>
    <string name="menu_all_parts">All</string>

    <!-- Search bar -->
    <string name="menu_bar_search">Search</string>
    <string name="menu_bar_users">Users</string>
    <string name="menu_bar_share">Share</string>
    <string name="menu_bar_logout">Log out</string>
    <string name="menu_bar_send_mail">Send eMail</string>
    <string name="menu_bar_call">Call</string>
    <string name="menu_bar_send_SMS">Send SMS</string>
    <string name="menu_bar_create_contact">Create contact</string>

    <!-- Checkin/Checkout -->
    <string name="dialog_check_out">Check out</string>
    <string name="dialog_check_out_confirm">Check out?</string>
    <string name="dialog_cancel_check_out">Undo check out</string>
    <string name="dialog_check_out_successful">Checkout successful</string>
    <string name="state_checked_out">Checked-Out</string>
    <string name="state_locked">Checked-Out</string>
    <string name="dialog_cancel_action">Do nothing</string>
    <string name="dialog_check_in">Check-in</string>
    <string name="dialog_check_in_confirm">Check in?</string>
    <string name="dialog_do_check_in">Check in</string>
    <string name="dialog_check_in_note">If you wish, enter a revision note for the check in :</string>
    <string name="diaog_check_in_successful">Check-in successful</string>
    <string name="state_checked_in">Check-in</string>

    <!-- Last iteration information -->
    <string-array name="iterationFieldNames">
        <item>Reference</item>
        <item>Revision note</item>
        <item>Modification date</item>
        <item>Author</item>
    </string-array>

    <!-- Users -->
    <string name="userSendEmail">Send email</string>
    <string name="userChooseNumber">Choose the number to call</string>
    <string name="userCancelCall">Cancel</string>

    <string-array name="userAddContactOptions">
        <item>Create new contact</item>
        <item>Add email to existing contact</item>
    </string-array>

    <string name="userSearch">User name</string>
    <string name="userLoadError">Error loading user list</string>
    <string name="userLoadInProgress">Loading user list…</string>

</resources>
