<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal">

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/Theme.AppTheme.BigTitle"
            android:text="@string/form_connection_url"/>

    <EditText
            android:id="@+id/urlField"
            android:hint="@string/form_connection_url_placeholder"
            android:text="@string/form_connection_url_placeholder"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:inputType="textUri"/>

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/Theme.AppTheme.BigTitle"
            android:text="@string/form_connection_login"/>

    <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"/>

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/Theme.AppTheme.BigTitle"
            android:text="@string/form_connection_password"/>

    <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/net_connection"
            android:id="@+id/btnConnection"
            android:textSize="26sp"/>

    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_connection_auto_connect"
            android:id="@+id/chkboxAutoConnect"
            android:checked="true"/>

</LinearLayout>