<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/Menu"
            android:id="@+id/menuScrollView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

    <LinearLayout
            style="@style/Menu"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

        <TextView
                android:layout_height="wrap_content"
                style="@style/Menu.Title"
                android:text="@string/menu_workspace"
                android:layout_width="wrap_content"/>

        <RadioGroup
                android:id="@+id/workspaceRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Menu.Item.RadioButton"/>

        <TextView
                android:layout_height="wrap_content"
                style="@style/Menu.Title"
                android:text="@string/menu_documents"
                android:layout_width="wrap_content"/>

        <!--###############################-->
        <LinearLayout
                android:id="@+id/menuDocumentSearch"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/Menu.Item"
                android:weightSum="1">

            <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_search_dark"
                    android:layout_gravity="center"
                    android:alpha=".6"
                    />

            <TextView
                    android:id="@+id/lmenuDocumentSearch"
                    android:layout_height="wrap_content"
                    style="@style/Menu.Item"
                    android:text="@string/menu_document_search"
                    android:layout_width="wrap_content"/>
        </LinearLayout>
        <!--###############################-->

        <LinearLayout
                android:id="@+id/menuRecentlyViewedDocuments"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/Menu.Item">

            <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_history_dark"
                    android:layout_gravity="center"
                    android:alpha=".6"/>

            <TextView
                    android:id="@+id/lmenuRecentlyViewedDocuments"
                    android:layout_height="wrap_content"
                    style="@style/Menu.Item"
                    android:text="@string/menu_documents_history"
                    android:layout_width="wrap_content"/>
        </LinearLayout>
        <!--###############################-->

        <LinearLayout
                android:id="@+id/menuAllDocuments"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/Menu.Item">

            <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_all_items_dark"
                    android:layout_gravity="center"
                    android:alpha=".6"/>

            <TextView
                    android:id="@+id/lmenuAllDocuments"
                    android:layout_height="wrap_content"
                    style="@style/Menu.Item"
                    android:text="@string/menu_all_documents"
                    android:layout_width="wrap_content"/>
        </LinearLayout>
        <!--###############################-->

        <LinearLayout
                android:id="@+id/menuFolders"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/Menu.Item">

            <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_folders_dark"
                    android:layout_gravity="center"
                    android:alpha=".6"/>

            <TextView
                    android:id="@+id/lmenuFolders"
                    android:layout_height="wrap_content"
                    style="@style/Menu.Item"
                    android:text="@string/menu_document_folders"
                    android:layout_width="wrap_content"/>
        </LinearLayout>

        <!--###############################-->

        <LinearLayout
                android:id="@+id/menuCheckedOutDocuments"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/Menu.Item">

            <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_checked_out_dark"
                    android:layout_gravity="center"
                    android:alpha=".6"/>

            <TextView
                    android:id="@+id/lmenuCheckedOutDocuments"
                    android:layout_height="wrap_content"
                    style="@style/Menu.Item"
                    android:text="@string/menu_checked_out_documents"
                    android:layout_width="wrap_content"/>
        </LinearLayout>


        <TextView
                android:layout_height="wrap_content"
                style="@style/Menu.Title"
                android:text="@string/menu_parts"
                android:layout_width="wrap_content"/>

        <!--###############################-->

        <LinearLayout
                android:id="@+id/menuPartSearch"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/Menu.Item">

            <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_search_dark"
                    android:layout_gravity="center"
                    android:alpha=".6"/>

            <TextView
                    android:id="@+id/lmenuPartSearch"
                    android:layout_height="wrap_content"
                    style="@style/Menu.Item"
                    android:text="@string/menu_part_search"
                    android:layout_width="wrap_content"/>
        </LinearLayout>
        <!--###############################-->

        <LinearLayout
                android:id="@+id/menuRecentlyViewedParts"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/Menu.Item">

            <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_history_dark"
                    android:layout_gravity="center"
                    android:alpha=".6"/>

            <TextView
                    android:id="@+id/lmenuRecentlyViewedParts"
                    android:layout_height="wrap_content"
                    style="@style/Menu.Item"
                    android:text="@string/menu_parts_history"
                    android:layout_width="wrap_content"/>
        </LinearLayout>

        <!--###############################-->

        <LinearLayout
                android:id="@+id/menuAllParts"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/Menu.Item">

            <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_all_items_dark"
                    android:layout_gravity="center"
                    android:alpha=".6"/>

            <TextView
                    android:id="@+id/lmenuAllParts"
                    android:layout_height="wrap_content"
                    style="@style/Menu.Item"
                    android:text="@string/menu_all_parts"
                    android:layout_width="wrap_content"/>
        </LinearLayout>
        <!--<TextView-->
        <!--android:layout_height="1px"-->
        <!--android:layout_width="wrap_content"-->
        <!--style="@style/Menu.Item"-->
        <!--android:clickable="false"-->
        <!--android:text="@string/emptyMenuItem"/>-->

    </LinearLayout>

</ScrollView>

